testing commit on branch

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-THE BLACKBOARD PROJECT (2010)
+THE BLACKBOARD PROJECT (2010) ...
 
 The blackboard model probably came about in 1962 when Allen Newell put these words to
 paper, "metaphorically we can think of a set of workers, all looking at the same
