removed middle initial

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 THE BLACKBOARD PROJECT (2010) 
-by David L. Whitehurst
+by David Whitehurst
 
 The blackboard model probably came about in 1962 when Allen Newell put these words to
 paper, "metaphorically we can think of a set of workers, all looking at the same
